# RangerGaugeCluster

./: .gitignore  CMakeLists.txt  Readme.md
qml/: AmbientBackground.qml  ClusterView.qml  DevPanel.qml  InfotainmentView.qml  InstrumentData.qml  Main.qml  Speedo.qml  Tach.qml
qml/UI/: TurnSignal.qml  WarningIndicator.qml
qml/UI/Data/: DataIcon.qml  Media.qml  Settings.qml  TirePressReading.qml  VehicleData.qml
qml/UI/GaugeCluster/: GeneralReadouts.qml  InstrumentData.qml  Media.qml  Settings.qml  SettingsRow.qml  Speedo.qml  Tach.qml  TirePressReading.qml  TurnSignal.qml  VehicleData.qml  WarningIndicator.qml  WarningIndicators.qml
qml/UI/General/: Card.qml  Dial.qml  Glass.qml  HMIButton.qml
qml/UI/Infotainment/: ClimateControl.qml  ClimateControlPanel.qml  FooterButton.qml  InfotainmentFooter.qml  InfotainmentHeader.qml  RangerLogo.qml  TempRingControl.qml  VehicleDataPanel.qml  WeatherPanel.qml
qml/UI/Infotainment/apps/: AudibleApp.qml  GoogleMapsApp.qml  HuluApp.qml  NavigationApp.qml  NetflixApp.qml  SettingsApp.qml  SpotifyApp.qml  WebAppView.qml  YoutubeApp.qml
qml/keyboard/: style.qml
qml/theme/: Theme.qml
qml/vehicleState/: VehicleState.qml
resources/html/: mapbox.html
screenshots/files_example/: SimpleNavigationMap.qml  mapbox.html.txt
scripts/: build-maplibre.sh
src/: ClimateService.h  ConnectivityService.h  LocationService.cpp  LocationService.h  MediaService.cpp  MediaService.h  NavigationService.cpp  NavigationService.h  SettingsService.cpp  SettingsService.h  SpotifyService.cpp  SpotifyService.h  ThemeService.cpp  ThemeService.h  UnitsService.cpp  UnitsService.h  VehicleState.cpp  VehicleState.h  WeatherService.cpp  WeatherService.h  main.cpp
